Lab 3: Stubs